fixed scrollbar on mobile view

--- a/src/App.scss
+++ b/src/App.scss
@@ -257,6 +257,22 @@
 
 @media only screen and (max-width: 425px) {
   #root {
+    .movie-app::-webkit-scrollbar {
+      width: 3px;
+      height: 0px;
+      background-color: #f5f5f5;
+    }
+    
+    .movie-app::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.6);
+      background-color: white;
+    }
+    
+    .movie-app::-webkit-scrollbar-thumb {
+      background-color: #fff;
+      background: red;
+    }
     .movie-app {
       .Movie-Search {
         margin-top: 1rem;
